# web-hw12-JWT

./: .gitignore  README.md  main.py  pyproject.toml
src/conf/: config.ini
src/database/: models.py
