[tool.poetry]
name = "web-hw12-jwt"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.14"
fastapi = {extras = ["all"], version = "^0.95.2"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}
psycopg2 = "^2.9.6"
jinja2 = "^3.1.2"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
